last changes before commit